# Traffic_Lights_For_AVSystem

./: CMakeLists.txt  README.md  car.c  car.h  lane.c  lane.h  lights.c  lights.h  main.c  output.json  simulation.sc  simulation_logic.c  simulation_logic.h
tests/: test_lane.cpp  test_lights.cpp  test_simulation.cpp
